wacc/test/golden/semanticErr.expressions.exprTypeErr
# expresission type mismatch bool->int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int b = 15 + 6 || 19
end


Semantic error in test/wacc_examples/invalid/semanticErr/expressions/exprTypeErr.wacc (line 12, column 18):
type error: expected a bool but found an int
> begin
>   int b = 15 + 6 || 19
>                  ^
> end

